# citation-audit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: citation-alternatives.agent.md  citation-auditor.agent.md  citation-finder.agent.md
.github/skills/citation-audit-common/: SKILL.md
.specstory/history/: 2026-05-08_22-01-56Z-audit-knowledgesystemtex-file.md  2026-05-11_12-30-53Z-citation-audit-agent-modifications.md  2026-05-25_16-54-17Z-file-overwrite-error-in-script.md
src/citation_audit/: cli.py  mcp_server.py
src/citation_audit/core/: __init__.py  classifier.py  extractor.py  index.py  library.py  scaffold.py  schema.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_extractor.py  test_index.py  test_library.py  test_mcp_tools.py  test_scaffold.py  test_schema.py
