[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citation-audit"
version = "0.1.0"
description = "CLI and MCP server for LaTeX citation auditing and assertion classification"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Greg Warnes", email = "greg@warnes-innovations.com" }]
keywords = ["citation", "audit", "latex", "mcp", "bibtex"]
dependencies = [
    "click>=8.0",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
citation-audit     = "citation_audit.cli:main"
citation-audit-mcp = "citation_audit.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citation_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
